--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: none;
+    text-align: center;
 }
 
 #btn{
